<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_shifts"
        android:icon="@drawable/ic_shifts"
        android:title="@string/shifts" />
    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/schedule" />
    <item
        android:id="@+id/nav_communication"
        android:icon="@drawable/ic_communication"
        android:title="@string/communication" />
    <item
        android:id="@+id/nav_learning"
        android:icon="@drawable/ic_learning"
        android:title="@string/learning" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu> 